language/move-compiler/tests/move_check/typing/constraints_not_satisfied_type_annotation.exp
warning[W09005]: dead or unreachable code
  ┌─ tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:17
  │
7 │         ignore((abort 0: CupC<R>));
  │                 ^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed.

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_type_annotation.move:7:26
  │
2 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
3 │     struct C {}
4 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
7 │         ignore((abort 0: CupC<R>));
  │                          ^^^^^^^
  │                          │    │
  │                          │    The type '0x8675309::M::R' does not have the ability 'copy'
  │                          'copy' constraint not satisifed

